# christmas-rs

./: Cargo.toml  README.md
.config/: config.json5  config.yaml
src/: app.rs  config.rs  constants.rs  main.rs  model.rs  tui.rs  ui.rs  utils.rs
src/action/: card.rs  game.rs  home.rs  mod.rs
src/components/: background.rs  help.rs  mod.rs  multiline.rs
src/constants/: background.rs  card.rs  game.rs  home.rs  mod.rs  title.rs
src/pages/: card.rs  game.rs  home.rs  mod.rs  title.rs
src/pages/game/: _object.rs  bird.rs  boundary.rs  mod.rs  object.rs
src/utils/: mod.rs  tui.rs
