[package]
name = "christmas-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
ratatui = { version = "0.29.0", features = ["serde", "macros"] }
rand = "0.8.5"
dirs = "5.0.1"
serde_json = "1.0.133"
serde = { version = "1.0.206", features = ["derive"] }
lazy_static = "1.5.0"
insta = "1.41.1"
ratatui-image = "3.0.0"
image = "0.25.5"
tokio = { version = "1.42.0", features = ["full"] }
futures = "0.3.31"
better-panic = "0.3.0"
clap = "4.5.23"
color-eyre = "0.6.3"
config = "0.14.1"
derive_deref = "1.1.1"
directories = "5.0.1"
human-panic = "2.0.2"
json5 = "0.4.1"
libc = "0.2.168"
log = "0.4.22"
pretty_assertions = "1.4.1"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
strum = { version = "0.26.3", features = ["derive"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tui-input = { version = "0.11.1", features = ["serde"] }
tracing-subscriber = { version = "0.3.19", features = ["serde", "env-filter"] }
tokio-util = "0.7.13"
serde_yaml = "0.9.34"
serde_plain = "1.0.2"
derive_builder = "0.20.2"
